--- a/project1/MalmöFixie-Bootstrap/buildABike.html
+++ b/project1/MalmöFixie-Bootstrap/buildABike.html
@@ -86,9 +86,11 @@
                                 <div class="col-xs-1 color white clickable"><a href="#"></a></div>
                                 <div class="col-xs-1 color black clickable"><a href="#"></a></div>
                             </div>
-                            <div id="progressBar" class="progress hidden">
-                                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                            <div class="row">
+                                <div id="progressBar" class="progress hidden">
+                                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
                                     Please wait...
+                                    </div>
                                 </div>
                             </div>
                         </div>
