--- a/project1/MalmöFixie-Bootstrap/produkt.html
+++ b/project1/MalmöFixie-Bootstrap/produkt.html
@@ -80,8 +80,8 @@
             <div class="hidden-sm hidden-xs">&nbsp;</div>
 
             <!-- Här är pris och man kan köpa produkten -->
-                <div class="row col-xs-offset-7 col-sm-offset-8 col-md-offset-8">               
-                    <div class="col-xs-10 col-sm-10 col-md-8">                       
+                <div class="row col-xs-offset-7 col-sm-offset-8 col-md-offset-5">               
+                    <div class="col-xs-10 col-sm-10 col-md-9">                       
                         <p class="lead text-right">7 595 KR</p>
                         <form class="form-horizontal">
                             <div class="form-group form-group-sm pull-right">
@@ -91,8 +91,8 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-9 col-sm-6 col-md-5 pull-right">
-                                    <button type="button" class="btn btn-default btn-block">Köp</button>
+                                <div class="col-xs-9 col-sm-6 col-md-9 pull-right">
+                                    <button type="button" class="btn btn-default pull-right">Köp</button>
                                 </div>
                             </div>
                         </form>
