--- a/project1/MalmöFixie-Bootstrap/produkt.html
+++ b/project1/MalmöFixie-Bootstrap/produkt.html
@@ -181,14 +181,13 @@
                     <label for="exampleInputEmail2">Email</label>
                     <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
                 </div>
-                <button type="submit" class="btn btn-default">Send!</button>
+                <button type="submit" class="btn btn-default" id="btn-submit">Send!</button>
             </form>
         </div>
         <div class="col-xs-12 col-md-6">
-            <p>Lorem ipsum dolor sit amet, has ea quem inani, mea cu bonorum ponderum expetendis. Partem cetero liberavisse ea sea. Pertinax facilisis his cu, ad sed ridens commodo lucilius. Has te percipit scribentur dissentiunt. At latine menandri duo.
-
-                Ius dico iudico no. Nec eu oblique quaestio salutatus, ne qui nominavi scriptorem reformidans, et nam dolore audiam. Mea rebum bonorum fabulas at, no sit minim tollit efficiantur, duo denique fastidii periculis an. Sit graece audiam consequat ad.</p>
-
+            <a href="#" class="fb-share"><img src="img/like_us_facebook-500x280.png" id="fbLogo"> </a>
+            <a href="#" class="twitter-share"><img src="img/twitter-social-network-icon-vector_652139.jpg" id="twitterLogo"> </a>
+            <p>Lorem ipsum dolor sit amet, has ea quem inani, mea cu bonorum ponderum expetendis. Partem cetero liberavisse ea sea. Pertinax facilisis his cu, ad sed ridens commodo lucilius. Has te percipit scribentur dissentiunt. At latine menandri duo.</p>
         </div>
     </div> <!-- end of container -->
 </main> <!--end of main row -->
@@ -214,5 +213,6 @@
             });
         });
     </script>
+<script src="js/main.js"></script>
 </body>
 </html>
