--- a/project1/MalmöFixie-Bootstrap/index.html
+++ b/project1/MalmöFixie-Bootstrap/index.html
@@ -69,6 +69,9 @@
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
                 </ol>
 
                 <!-- Wrapper for slides -->
@@ -87,6 +90,24 @@
                     </div>
                     <div class="item">
                         <img src="img/bike1.jpg" alt="Another bike">
+                        <div class="carousel-caption">
+                            ...
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="img/bike2.jpg" alt="Another bike">
+                        <div class="carousel-caption">
+                            ...
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="img/bike1.jpg" alt="Another bike">
+                        <div class="carousel-caption">
+                            ...
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="img/bike2.jpg" alt="Another bike">
                         <div class="carousel-caption">
                             ...
                         </div>
