--- a/project1/MalmöFixie-Bootstrap/produkt.html
+++ b/project1/MalmöFixie-Bootstrap/produkt.html
@@ -82,17 +82,17 @@
             <!-- Här är pris och man kan köpa produkten -->
                 <div class="row col-xs-offset-7 col-sm-offset-8 col-md-offset-5">               
                     <div class="col-xs-10 col-sm-10 col-md-9">                       
-                        <p class="lead text-right">7 595 KR</p>
+                        <p class="lead text-right">7 59€</p>
                         <form class="form-horizontal">
                             <div class="form-group form-group-sm pull-right">
-                                <label class="col-xs-5 col-sm-7 col-md-8 control-label" for="formGroupInputPrice">Antal</label>
+                                <label class="col-xs-5 col-sm-7 col-md-8 control-label" for="formGroupInputPrice">Quantity</label>
                                 <div class="col-xs-7 col-sm-5 col-md-4">
                                     <input class="form-control" type="number" placeholder="1" id="formGroupInputPrice">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-xs-9 col-sm-6 col-md-9 pull-right">
-                                    <button type="button" class="btn btn-default pull-right">Köp</button>
+                                    <button type="button" class="btn btn-default pull-right">Buy</button>
                                 </div>
                             </div>
                         </form>
@@ -103,37 +103,34 @@
 
         <!-- Här har vi mer information som användaren kan välja att läsa mer om, organiserat i tabbar -->
         <ul class="nav nav-tabs" id="myTab">
-            <li role="presentation" class="active"><a href="#Beskrivning">Beskrivning</a></li>
-            <li role="presentation"><a href="#Funktioner">Funktioner</a></li>
-            <li role="presentation"><a href="#Fakta">Fakta</a></li>
-            <li role="presentation"><a href="#Bilder">Bilder</a></li>
-            <li role="presentation"><a href="#Övrigt">Övrigt</a></li>
+            <li role="presentation" class="active"><a href="#Beskrivning">Description</a></li>
+            <li role="presentation"><a href="#Funktioner">Functions</a></li>
+            <li role="presentation"><a href="#Fakta">Facts</a></li>
+            <li role="presentation"><a href="#Bilder">Images</a></li>
+            <li role="presentation"><a href="#Övrigt">Misc</a></li>
         </ul>
 
         <!-- Här är innehållet i tabbarna som användaren ser när han väljer att läsa mer om produkten (klickar på en tabb) -->
         <div class="tab-content">
             <div id="Beskrivning" class="tab-pane fade in active">
-                <h3>Beskrivning</h3>
+                <h3>Description</h3>
                 <p>MalmöFixie.
-				Floater Twospeed RACE är samma fina cykel som den vanliga Floater Singlespeed men med en
-				 tvådelad navväxel och en sportigare geometri. Bockstyret ger dig en mer framåtlutad cykelposition så att du kan få mer kraft i tramptagen. Den är helt enkelt mer mångsidig och blir lättare att använda i vardagscyklingen. Passar perfekt att ha till och från jobbet eller bara som glassig stadscykel.
-
-				Aluminiumramen gör den lätt, kvick, styv och rolig att cykla på. Den kommer såklart med ett par pålitliga bromsar från Tektro och ett smalt styre som gör det lättare att kryssa fram genom staden! En riktigt cool fixie till lågt pris! 
-				Prod.nr: 379519
+				Floater Twospeed RACE is a super duper bike.
+                Prod.nr: 379519
 				</p>
             </div>
             <div id="Funktioner" class="tab-pane fade">
-                <h3>Funktioner</h3>
+                <h3>Functions</h3>
                 <p>Vestibulum nec erat eu rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
             </div>
             <div id="Fakta" class="tab-pane fade">
-                <h3>Fakta</h3>
+                <h3>Facts</h3>
                 <p>Vestibulum nec erat eu rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
             </div>
             <div id="Bilder" class="tab-pane fade">
 
                 <!-- Lite extra produktbilder -->
-                <h3>Bilder</h3>
+                <h3>Images</h3>
                 <div class="row">
                     <div class="col-xs-6 col-sm-4 col-md-3">
                         <a href="img/bike1.jpg" class="thumbnail" data-toggle="lightbox">
@@ -149,7 +146,7 @@
             </div>
 
             <div id="Övrigt" class="tab-pane fade">
-                <h3>Övrigt</h3>
+                <h3>Misc</h3>
                 <p>Vestibulum nec erat eu rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
             </div>
 
